# prompt-modifier

./: .gitignore  README.md
examples/js/: prompt_manipulator.js
examples/js-malicious/: prompt_manipulator_malicious.js
examples/python/: after.py  app.py  test.py
examples/python-component/promptmodifier/wit_world/exports/: __init__.py
misc/string-processor-http/: Cargo.toml  spin.toml
misc/string-processor-http/src/: lib.rs
misc/test/: python.py
misc/test/wit_world/exports/: __init__.py
processor/: Cargo.toml  python_template.liquid  python_template_modules.liquid
processor/includes/: python_module.py  temp_goal_rust.wasm  world.wit
processor/src/: main.rs
processor/temp/2665aeb5-97e0-48f6-aacd-67949c426e79/component-input/: app.py  before.py  test.py
processor/temp/38217c27-0557-4f82-a5db-fa44f5c6cd08/component-input/: app.py
processor/temp/a8429b8d-d213-44a4-a3e5-32cb573cf7ee/component-input/promptmodifier/wit_world/exports/: __init__.py
shared/wit/: world.wit
spin-app-template/: Cargo.toml  spin.toml
spin-app-template/src/: lib.rs
