[package]
name = "string-processor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "^1.0.100"
clap = { version = "4.5", features = ["derive"] }
componentize-py = { git = "https://github.com/bytecodealliance/componentize-py" }
glob = "0.3.3"
tokio = "1.47.1"
uuid = { version = "1.4", features = ["v4"] }
wac-graph = { git = "https://github.com/bytecodealliance/wac", version = "0.9.0-dev" }
walkdir = "2.5.0"
